--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "engines": {
     "node": "8.1.3",
-    "npm": "5.1.0"
+    "npm": "5.1.0",
+    "preact-cli": "1.3.0"
   },
   "scripts": {
     "test": "eslint . && preact test",
-    "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
+    "start": "npm run serve",
     "build": "preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch"
