--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "tokyo-art-scene",
-  "version": "1.0.0",
+  "version": "0.8.0",
   "description": "",
   "main": "index.js",
   "engines": {
     "node": "8.1.3",
-    "npm": "5.1.0",
-    "preact-cli": "1.3.0"
+    "npm": "5.1.0"
   },
   "scripts": {
     "test": "eslint . && preact test",
-    "start": "npm run serve",
-    "build": "preact build",
+    "start": "npm run build",
+    "build": "npm run build",
     "serve": "preact build && preact serve",
     "dev": "preact watch"
   },
