--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "eslint . && preact test",
-    "start": "npm run -s serve",
+    "start": "npm install && npm run -s serve",
     "build": "preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch",
@@ -23,11 +23,11 @@
   },
   "devDependencies": {
     "eslint": "^4.2.0",
-    "eslint-config-synacor": "^1.0.1",
-    "if-env": "^1.0.0",
-    "preact-cli": "^1.4.0"
+    "eslint-config-synacor": "^1.0.1"
   },
   "dependencies": {
+    "if-env": "^1.0.0",
+    "preact-cli": "^1.4.0",
     "express": "^4.15.3",
     "preact": "^8.2.1",
     "preact-compat": "^3.16.0",
