--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "tokyo-art-scene",
   "version": "0.6.0",
-  "description": "",
+  "description": "Effortlessly discover new art events around Tokyo",
   "main": "index.js",
-  "engines": {
-    "node": "8.1.3",
-    "npm": "5.1.0"
-  },
   "scripts": {
     "test": "eslint . && preact test",
     "start": "npm install && npm run -s serve",
